cleaning up carousel

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -289,64 +289,7 @@
 <!-- CSS only -->
 <!-- Styling specific to carousel-->
 {% if totalresponses  > 0 %}
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-    </style>
-
-    
-    <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
-
-
+  
 
   <div id="myCarousel"  class="carousel carousel-dark slide"   data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -360,7 +303,7 @@
         <div class="bg-light text-dark">
           <br><br>
           
-          <div class="w-50 p-3 mh-25 mx-auto">
+          <div class="w-75 p-3 mh-25 align-items-start">
             <h5>Users per category</h5>
           <canvas id="lineChart" ></canvas>
         </div><br><br>
@@ -371,7 +314,7 @@
         <div class="bg-light text-dark">
           <br><br>
           <div class="container">
-            <div class="w-50 p-3 mh-25 mx-auto">
+            <div class="w-75 p-3 mh-25 align-items-start">
             <div class="row align-items-start">
               <h4>Words your users use:</h4>
               <div class="col">
@@ -393,15 +336,15 @@
       <div class="carousel-item" width="100%">
         <div class="bg-light text-dark">
           <br><br>
-          <div class="w-50 p-3 mh-25 mx-auto">
+          <div class="w-75 p-3 mh-25 align-items-start">
             <div class="row align-items-start">
               <h4>Times and distribution:</h4>
               <div class="col-8">
-                <h5>Surveys over time</h5>
+                <h5>Responses over time</h5>
                 <canvas id="lineChartDates" ></canvas>
               </div>
               <div class="col-4">
-                <h5>Distribution</h5>
+                <h5>Percentage of users per category</h5>
                 <canvas id="pieChart"></canvas>
               </div>
             </div>
@@ -412,10 +355,10 @@
 
 
 
-    <button class="carousel-control-prev text-dark" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+    <!--<button class="carousel-control-prev text-dark" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon text-dark" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
-    </button>
+    </button>-->
     <button class="carousel-control-next text-dark" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon text-dark" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
