fixed background color issues on graphs

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -297,10 +297,10 @@
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner" >
+    <div class="carousel-inner">
 
       <div class="carousel-item active">
-        <div class="bg-light text-dark">
+        <div>
           <br><br>
           
           <div class="w-75 p-3 mh-25 align-items-start">
@@ -311,7 +311,7 @@
 
       </div>
       <div class="carousel-item">
-        <div class="bg-light text-dark">
+        <div>
           <br><br>
           <div class="container">
             <div class="w-75 p-3 mh-25 align-items-start">
@@ -334,7 +334,7 @@
       </div>
 
       <div class="carousel-item" width="100%">
-        <div class="bg-light text-dark">
+        <div>
           <br><br>
           <div class="w-75 p-3 mh-25 align-items-start">
             <div class="row align-items-start">
@@ -362,6 +362,7 @@
     <button class="carousel-control-next text-dark" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon text-dark" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
+      <small>Next graph</small>
     </button>
   </div>
 
