fixed bug where carousel would keep spinning

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -291,7 +291,7 @@
 {% if totalresponses  > 0 %}
   
 
-  <div id="myCarousel"  class="carousel carousel-dark slide"   data-bs-ride="carousel">
+  <div id="myCarousel"  class="carousel slide carousel-dark" data-bs-interval="false">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -299,7 +299,7 @@
     </div>
     <div class="carousel-inner">
 
-      <div class="carousel-item active">
+      <div class="carousel-item active" data-bs-interval="false">
         <div>
           <br><br>
           
@@ -310,7 +310,7 @@
         </div>
 
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="false">
         <div>
           <br><br>
           <div class="container">
@@ -333,7 +333,7 @@
 
       </div>
 
-      <div class="carousel-item" width="100%">
+      <div class="carousel-item" data-bs-interval="false">
         <div>
           <br><br>
           <div class="w-75 p-3 mh-25 align-items-start">
