fixed overflow graphs on small screensizes

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -315,13 +315,13 @@
           <br><br>
           <div class="container">
             <div class="w-75 p-3 mh-25 align-items-start">
-            <div class="row align-items-start">
+            <div class="row align-items-start row-sm-12">
               <h4>Words your users use:</h4>
-              <div class="col">
+              <div class="col-sm-6">
                 <h5>Happy users</h5>
                 <canvas id="lineChartWords" width="300" height="200"></canvas>
               </div>
-              <div class="col">
+              <div class="col-sm-6">
                 <h5>Unhappy users</h5>
                 <canvas id="lineChartWordsNegative" width="300" height="200"></canvas>
               </div>
@@ -337,13 +337,13 @@
         <div>
           <br><br>
           <div class="w-75 p-3 mh-25 align-items-start">
-            <div class="row align-items-start">
+            <div class="row align-items-start row-sm-12">
               <h4>Times and distribution:</h4>
-              <div class="col-8">
+              <div class="col-sm-8">
                 <h5>Responses over time</h5>
                 <canvas id="lineChartDates" ></canvas>
               </div>
-              <div class="col-4">
+              <div class="col-sm-4">
                 <h5>Percentage of users per category</h5>
                 <canvas id="pieChart"></canvas>
               </div>
@@ -359,11 +359,13 @@
       <span class="carousel-control-prev-icon text-dark" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>-->
+    <div class="row">
     <button class="carousel-control-next text-dark" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon text-dark" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
       <small>Next graph</small>
     </button>
+  </div>
   </div>
 
 
