--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -289,7 +289,8 @@
 <!-- CSS only -->
 <!-- Styling specific to carousel-->
 {% if totalresponses  > 0 %}
-  
+<br><br>
+<h2>Analytics</h2>
 
   <div id="myCarousel"  class="carousel slide carousel-dark" data-bs-interval="false">
     <div class="carousel-indicators">
@@ -358,7 +359,7 @@
       <div>
         <br><br>
         <div class="w-50 p-3 mh-25 align-items-start row-6">
-          <div class="row align-items-start row-sm-6">
+          <div class="row align-items-start row-sm-12">
               <h5>Distribution of your users</h5>
               <canvas id="pieChart" ></canvas>
             </div>
