logic to control inflow of users to waitinglist

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -89,7 +89,7 @@
                  <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-dark rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                      <a class="btn bg-secondary-outline py-3 px-4 border-dark " href="/sign-in" >log in!</a>  
                      <!--<a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" >Try for free!</a>  -->
-                     <a class="btn bg-secondary py-3 px-4 border-dark " href="getinvited" >Try for free!</a>
+                     <a class="btn bg-secondary py-3 px-4 border-dark " href="sign-up" ><b>Try for free!</b></a>
                  </button>
                  
                  <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -104,7 +104,7 @@
                          
                          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/sign-in">Sign In</a></li>
                          <!--<a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" >Try for free!</a>  -->
-                         <a class="btn bg-secondary py-3 px-4 border-dark " href="getinvited" >Try for free!</a>
+                         <a class="btn bg-secondary py-3 px-4 border-dark " href="sign-up" ><b>Try for free!</b></a>
                      {% endif%}
                      </ul>
                  </div>
@@ -135,7 +135,7 @@
                         <h1 class="display-1 lh-1 mb-3">Ask for feedback without asking for too much.</h1>
                         <p class="lead fw-normal mb-5">Customers don't answer your sleep-inducing questionnaires, but you need feedback. Worry no more, you'll hear the feedback through the Frankly.</p>
                         <div class="d-flex flex-column flex-lg-row align-items-center">
-                            <a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" >Try for free!</a>    
+                            <a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" ><b>Try for free!</b></a>    
                         
                         </div>
                     </div>
