changed name for signup

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -133,7 +133,7 @@
                     <!-- Mashead text and app badges-->
                     <div class="mb-5 mb-lg-0 text-center text-lg-start">
                         <h1 class="display-1 lh-1 mb-3">Ask for feedback without asking for too much.</h1>
-                        <p class="lead fw-normal mb-5">Customers don't answer your sleep-inducing questionnaires, but you need feedback. Worry no more, you'll hear the feedback through the Frankly.</p>
+                        <p class="lead fw-normal mb-5">Customers don't answer sleep-inducing questionnaires, but you need feedback. Frankly helps you collect feedback, through a link, text, email or QR code.</p>
                         <div class="d-flex flex-column flex-lg-row align-items-center">
                             <a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" ><b>Try for free!</b></a>    
                         
