--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -303,7 +303,7 @@
     <div class="carousel-inner">
 
       <div class="carousel-item active align-items-start" data-bs-interval="false">
-        <div>
+        <div style="height: 420px;">
           <br><br>
             <h5>Users per category</h5>
           <canvas id="lineChart" width="720" ></canvas>
@@ -313,7 +313,7 @@
 
 
     <div class="carousel-item align-items-start" data-bs-interval="false">
-      <div>
+      <div style="height: 420px;">
         <br><br>
               <h5>Words your happy users use:</h5>
               <canvas id="lineChartWords" width="720"></canvas>
@@ -322,7 +322,7 @@
     </div>
 
     <div class="carousel-item align-items-start" data-bs-interval="false">
-      <div>
+      <div style="height: 420px;">
         <br><br>
               <h5>Words your unhappy users use:</h5>
               <canvas id="lineChartWordsNegative" width="720"></canvas>
@@ -331,9 +331,8 @@
     </div>
 
     <div class="carousel-item align-items-start" data-bs-interval="false">
-      <div>
+      <div style="height: 420px;">
         <br><br>
-      
               <h5>Responses over time</h5>
               <canvas id="lineChartDates" width="720"></canvas>
         
