--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -33,7 +33,10 @@
           <!-- Charting library import-->
          <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>   
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+
+     
          <!-- Google fonts-->
          <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
          <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -135,7 +138,7 @@
                     <!-- Mashead text and app badges-->
                     <div class="mb-5 mb-lg-0 text-center text-lg-start">
                         <h1 class="display-1 lh-1 mb-3">Ask for feedback without asking for too much.</h1>
-                        <p class="lead fw-normal mb-5">Customers don't answer sleep-inducing questionnaires, but you need feedback. Frankly helps you collect feedback, through a link, text, email or QR code.</p>
+                        <p class="lead fw-normal mb-5">Customers don't answer sleep-inducing questionnaires, Frankly helps you collect feedback easily.</p>
                         <div class="d-flex flex-column flex-lg-row align-items-center">
                             <a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" ><b>Try for free!</b></a>    
                         
@@ -158,10 +161,38 @@
                             </div>
                         </div>
                     </div>
+                
                 </div>
             </div>
         </div>
     </header>
+
+
+ <!-- Quote/testimonial aside-->
+ <aside class="text-center bg-third">
+
+    <div class="container">
+        <div class="row d-flex justify-content-between">
+          <div class="col-3">
+              <h2><i class="bi bi-chat-left-text-fill"></i></h2>
+              <h2 class="lh-1 mb-4">1. You ask</h2>
+            
+          </div>
+          <div class="col-3">
+            <h2><i class="bi bi-megaphone-fill"></i></h2>
+            <h2 class="lh-1 mb-4">2. They Share </h2>
+            
+          </div>
+          <div class="col-3">
+              <h2><i class="bi bi-bar-chart-line-fill"></i></h2>
+            <h2 class="lh-1 mb-4">3. You Analyze</h2>
+            
+          </div>
+        </div>
+      </div>
+</aside>
+
+
    <!-- Basic features section-->
    <section class="bg-secondary">
     <div class="container px-5">
@@ -171,41 +202,90 @@
                 <p class="lead fw-normal text mb-5 mb-lg-0">Frankly will collect all your survey responses in 1 clear dashboard. On top of that we analyze words commonly used by happy and unhappy users so you're always in the know of what is going on. </p>
             </div>
             <div class="col-sm-8 col-md-6">
-                <div class="px-5 px-sm-0"><img class="img-fluid" src="{{ url_for('static',filename='assets/img/dashboard-big.png') }}" alt="..." /></div>
+                <!--<div class="px-5 px-sm-0"><img class="img-fluid" src="{{ url_for('static',filename='assets/img/dashboard-big.png') }}" alt="..." /></div> -->
+
+                <div class=" shadow-lg card border-grey">
+
+                    <div class="card-header d-flex bg-primary justify-content-between align-items-center">
+                    <h1><i class="far fa-smile" color-primary></i></h1>  <h4>How did you like the pizza?</h4>
+  
+                    <div>
+                     
+                      <div class="btn-group">
+                        <button
+                          type="button"
+                          class="btn btn-sm btn-dark dropdown-toggle"
+                          data-bs-toggle="dropdown"
+                          
+                        ><i class="bi bi-trash"></i></button>
+                        <ul class="dropdown-menu">
+                          <li>
+                            <a href="" class="dropdown-item"
+                              ><i class="bi bi-trash"></i> Delete</a
+                            >
+                          </li>
+                        </ul>
+                      </div>
+                      
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-text"><h3><b>I really liked the crust, it was out of this world!</b></h3></div>
+                    <br />
+                    <div class="collapse text-dark" id="comments-post">
+                      <div class="card">
+                        <div class="card-body" id="comments-expanded-post">
+                          <h5> Followup Answers:</h5>
+                              <small>- Customquesion1</small><br>
+                              <small>- Customquestion2</small>
+                          
+                          <div class="d-flex justify-content-between align-items-center">
+                            <div>
+                              <br>
+                              <ul>Your customer said: <br> "<i>COMMENTTEXT</i>"</ul>
+                            </div>
+                            <div>
+                              <small class="text-muted"> 2022-06-04</small>
+                              
+                            </div>
+                          </div>
+                        
+                        </div>
+                      </div>
+                    </div>
+                    <p class="card-text">
+                      
+                      <a data-bs-toggle="collapse" href="" role="button">
+                        <small class="text-dark">View 3 answers to followup questions</small>
+                      </a>
+                      
+                    </p>
+                    
+                  </div>
+                  <div class="card-footer text-muted justify-content-between d-inline">
+                    <div class="d-inline justify-content-between">2022-05-23</div>
+                  </div>
+                </div>
+
+
             </div>
         </div>
     </div>
 </section>
-    <!-- Quote/testimonial aside-->
-    <!--
-    <aside class="text-center bg-secondary">
-        <div class="container">
-            <div class="row d-flex justify-content-between">
-              <div class="col-3">
-                <img src="{{ url_for('static',filename='assets/img/ask.png') }}" alt="..." style="max-width: 100%;" />
-              </div>
-              <div class="col-3">
-                <img src="{{ url_for('static',filename='assets/img/share.png') }}" alt="..." style="max-width: 100%;" />
-              </div>
-              <div class="col-3">
-                <img src="{{ url_for('static',filename='assets/img/analyze.png') }}" alt="..." style="max-width: 100%;" />
-              </div>
-            </div>
-          </div>
-    </aside>-->
+   
     <!-- App features section-->
     <section id="features" class="bg-primary">
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0">
                     <div class="container-fluid px-5">
-                        <h1>Send surveys easily</h1>
+                        <h1>Reach your users easily</h1>
                         <div class="row gx-5">
                             <div class="col-md-6 mb-5">
                                 
                                 <!-- Feature item-->
                                 <div class="text-center">
-                                    <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
+                                    <i class="bi-phone icon-feature d-block mb-3"></i>
                                     <h3 class="font-alt">SMS</h3>
                                     <p class="text mb-0">Send yourself a text message with your Frankly template and share it with your clients</p>
                                 </div>
@@ -213,7 +293,8 @@
                             <div class="col-md-6 mb-5">
                                 <!-- Feature item-->
                                 <div class="text-center">
-                                    <i class="bi-camera icon-feature text-gradient d-block mb-3"></i>
+                                    <i class="bi bi-share icon-feature d-block mb-3"></i>
+                                    
                                     <h3 class="font-alt">Share Link</h3>
                                     <p class="text mb-0">Share a link to your survey template to redirect customers to your survey</p>
                                 </div>
@@ -223,7 +304,7 @@
                             <div class="col-md-6 mb-5 mb-md-0">
                                 <!-- Feature item-->
                                 <div class="text-center">
-                                    <i class="bi-gift icon-feature text-gradient d-block mb-3"></i>
+                                    <i class="bi bi-envelope-check icon-feature d-block mb-3"></i>
                                     <h3 class="font-alt">Email</h3>
                                     <p class="text mb-0">Send yourself the email template or send a batch to your customers directly</p>
                                 </div>
@@ -231,7 +312,7 @@
                             <div class="col-md-6">
                                 <!-- Feature item-->
                                 <div class="text-center">
-                                    <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
+                                    <i class="bi bi-qr-code icon-feature d-block mb-3"></i>
                                     <h3 class="font-alt">QR Codes</h3>
                                     <p class="text mb-0">Add the QR codes to content of your own, wheter it's a billboard or a sticker</p>
                                 </div>
@@ -249,11 +330,11 @@
                                     <stop class="gradient-end-color" offset="100%"></stop>
                                 </linearGradient>
                             </defs>
-                            <circle cx="50" cy="50" r="50"></circle></svg
-                        ><svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="50" cy="50" r="50"></circle></svg>
+                        <svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
                             <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(120.42 -49.88) rotate(45)"></rect>
-                            <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg
-                        ><svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
+                            <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg>
+                        <svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
                         <div class="device-wrapper">
                             <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
                                 <div class="screen bg-black">
@@ -297,7 +378,7 @@
                         <div class="col-md-6 mb-5">
                             <!-- Feature item-->
                             <div class="text-center">
-                                <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
+                                <i class="bi bi-chat icon-feature d-block mb-3"></i>
                                 <h3 class="font-alt">Send surveys easily</h3>
                                 <p class="text mb-0">Whether your users prefer a link, a SMS, email or QR code. Frankly has got you covered</p>
                             </div>
@@ -305,7 +386,7 @@
                         <div class="col-md-6 mb-5">
                             <!-- Feature item-->
                             <div class="text-center">
-                                <i class="bi-camera icon-feature text-gradient d-block mb-3"></i>
+                                <i class="bi bi-speedometer icon-feature  d-block mb-3"></i>
                                 <h3 class="font-alt">Live Dashboard</h3>
                                 <p class="text mb-0">Each response is processed instantly and shows up on your dashboard. Frankly will then analyze commonly used words from your users</p>
                             </div>
@@ -315,7 +396,7 @@
                         <div class="col-md-6 mb-5 mb-md-0">
                             <!-- Feature item-->
                             <div class="text-center">
-                                <i class="bi-gift icon-feature text-gradient d-block mb-3"></i>
+                                <i class="bi bi-tools icon-feature  d-block mb-3"></i>
                                 <h3 class="font-alt">Custom Questions</h3>
                                 <p class="text mb-0">Send your users up to 3 custom questions </p>
                             </div>
@@ -323,7 +404,7 @@
                         <div class="col-md-6">
                             <!-- Feature item-->
                             <div class="text-center">
-                                <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
+                                <i class="bi bi-cash icon-feature d-block mb-3"></i>
                                 <h3 class="font-alt">Try for free</h3>
                                 <p class="text mb-0">Get started for free today, as Frankly has a pay-as-you-go model. After your first 100 surveys, you can buy 100 more for just €3.99</p>
                             </div>
@@ -341,11 +422,11 @@
                                 <stop class="gradient-end-color" offset="100%"></stop>
                             </linearGradient>
                         </defs>
-                        <circle cx="50" cy="50" r="50"></circle></svg
-                    ><svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="50" cy="50" r="50"></circle></svg>
+                    <svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
                         <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(120.42 -49.88) rotate(45)"></rect>
-                        <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg
-                    ><svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
+                        <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg>
+                    <svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
                     <div class="device-wrapper">
                         <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
                             <div class="screen bg-black">
