set free seats to 500 for reddit to expore

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -360,7 +360,7 @@ const myChart = new Chart(ctx, {
                                 <div class="text-center">
                                     <i class="bi bi-qr-code icon-feature d-block mb-3"></i>
                                     <h3 class="font-alt">QR Codes</h3>
-                                    <p class="text mb-0">Add the QR codes to content of your own, wheter it's a billboard or a sticker</p>
+                                    <p class="text mb-0">Add the QR codes to content of your own, whether it's a billboard or a sticker</p>
                                 </div>
                             </div>
                         </div>
