set min height of theme.html

--- a/website/templates/theme.html
+++ b/website/templates/theme.html
@@ -119,7 +119,7 @@
 
 
         <!-- Main content of page-->
-        <section class="page-section portfolio" id="portfolio">
+        <section class="page-section portfolio" style="min-height: 1300px;"  id="portfolio">
        <br>
         <!-- end of the script that runs alerts--> 
             <!-- Start of the code that runs alerts on the whole system. If there is an alert then it will be appended at the top of the <body> you can pass a category from the Python script to set color.-->  
