--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -139,7 +139,7 @@
                     <!-- Mashead text and app badges-->
                     <div class="mb-5 mb-lg-0 text-center text-lg-start">
                         <h1 class="display-1 lh-1 mb-3">Ask for feedback without asking for too much.</h1>
-                        <p class="lead fw-normal mb-5">Customers don't answer sleep-inducing questionnaires, Frankly helps you collect feedback easily.</p>
+                        <p class="lead fw-normal mb-5">Customers don't answer sleep-inducing questionnaires, Frankly is the easiest way to collect feedback.</p>
                         <div class="d-flex flex-column flex-lg-row align-items-center">
                             <a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" ><b>Try for free!</b></a>    
                         
@@ -389,7 +389,7 @@ const myChart = new Chart(ctx, {
                                     <!-- * * This can be a video, image, or just about anything else.-->
                                     <!-- * * Set the max width of your media to 100% and the height to-->
                                     <!-- * * 100% like the demo example below.-->
-                                    <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/demp-screen.mp4') }}" type="video/mp4" /></video>
+                                    <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="{{ url_for('static',filename='assets/img/demo-screen.mp4') }}" type="video/mp4" /></video>
                                 </div>
                             </div>
                         </div>
@@ -444,7 +444,7 @@ const myChart = new Chart(ctx, {
                             <div class="text-center">
                                 <i class="bi bi-tools icon-feature  d-block mb-3"></i>
                                 <h3 class="font-alt">Custom Questions</h3>
-                                <p class="text mb-0">Send your users up to 3 custom questions </p>
+                                <p class="text mb-0">Send your users up to 3 custom questions to ask them things that are important to your business </p>
                             </div>
                         </div>
                         <div class="col-md-6">
